plugins {
    id "java"
    id "jacoco"
}

group "uk.gov.di.clientregistry"
version "unspecified"

dependencies {

    compileOnly configurations.lambda,
            configurations.ssm,
            configurations.sns,
            configurations.dynamodb

    implementation configurations.nimbus,
            configurations.gson,
            'commons-validator:commons-validator:1.9.0'

    implementation project(":orchestration-shared")

    runtimeOnly configurations.logging_runtime

    testImplementation configurations.tests,
            configurations.lambda_tests,
            project(":orchestration-shared-test"),
            configurations.lambda,
            configurations.sqs,
            configurations.dynamodb

    testRuntimeOnly configurations.test_runtime
}

test {
    useJUnitPlatform()
    environment "TRACING_ENABLED", "false"
}

task buildZip(type: Zip) {
    from compileJava
    from processResources
    into("lib") {
        from configurations.runtimeClasspath
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
    dependsOn "test"
}
